2008-08-16	Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Fixed bug where client would crash if another player
	  was targeted when you hit a warp point.

2008-08-14	Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Uncommented line so that MP status bar correctly
	  updates based on remaining mana

2008-08-13	Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Added code to display NPC and monster names using an
	  alternate colored font.  Added support for a server
	  provided "GM flag", which prepends "(GM)" to the player's
	  name and changes the font color.

2008-08-08  Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Made "--skipupdate" skip the update download process, but
	  still load whatever updates have been previously downloaded.

2008-07-25  Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Added feature to remember window locations from one 
	  session to the next (patch from TMW by ElvenProgrammer)

2008-07-24  Lloyd Bryant ("Sanga")  <sanga@aethyra.com>

	* Tweak in net/beinghandler.cpp to compensate for a visual
	  bug when using the TMW server.

2008-07-23  Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Added support for capes/misc1/misc2 into the character
	  selection display

2008-07-23  Lloyd Bryant ("Sanga")  <sanga@aethyra.com>

	* Added "chat" button to open/close chat window
	* Added support for viewable cape/misc1/misc2 (new eAthena
	  version ONLY

2008-07-22  Lloyd Bryant ("Sanga")  <sanga@aethyra.com>

	* Added handler for 0x0086 movement packet (new eAthena).
	* Changed startup sequence for game.cpp to send a ping packet
	  to the server after all the handlers have been initialized.
	  This is required by the new eAthena version.
	* Added #deines for some "ping" packets.

2008-07-19  Lloyd Bryant ("Sanga")  <sanga@aethyra.com>

	* Removed unnecessary check ("weight") from itemdb loader

2008-07-18  Lloyd Bryant ("Sanga")  <sanga@aethyra.com>

	* Added code to provide viewable glove and shoe sprites
